# hive-mind-system

./: .gitignore  README.md  __main__.py  agent_commander_bridge.py  autonomous_dev_orchestrator.py  conftest.py  hive_worker.py  issue_templates.py  pyproject.toml  setup.py
agents/: __init__.py
agents/architect/: __init__.py  auto_merge.py  integrator.py  orchestrator.py  planner.py  task_splitter.py  validator.py
agents/shared/: __init__.py  git_client.py  github_client.py  github_retry.py  task_graph.py
agents/worker/: __init__.py  enhanced_worker.py  executor.py
docs/guides/: hive-mind.md
scripts/: architect.py  hive-batch.ps1  hive-batch.sh  hive-dev.ps1  hive-issue.ps1  hive-pr.ps1  hive-solve.ps1  hive-solve.sh  hive-status.ps1  hive-status.sh  hive-stop.ps1  hive-stop.sh  worker.py
skills/: git-branch-manager.md  git-commit-push.md  git-fork-clone.md  github-issue-manager.md  github-pr-creator.md  github-pr-merger.md  github-pr-reviewer.md
tests/: test_git_client.py  test_integrator.py  test_orchestrator.py  test_planner.py  test_task_graph.py  test_validator.py
