[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hive-mind"
version = "0.1.0"
description = "Autonomous multi-agent development system"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "flake8>=6.0",
]

[project.scripts]
hive-solve = "scripts.worker:main"
hive-worker = "scripts.worker:main"
hive-architect = "scripts.architect:main"

[tool.hatch.build.targets.wheel]
packages = ["agents", "scripts"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
